--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
  </servlet-mapping>
   <context-param>
 	  <param-name>primefaces.THEME</param-name>
-	  <param-value>south-street</param-value>
+	  <param-value>bluesky</param-value>
   </context-param>
   <context-param>
 	  <param-name>org.jboss.jbossfaces.JSF_CONFIG_NAME</param-name>
