--- a/pom.xml
+++ b/pom.xml
@@ -133,11 +133,11 @@
         <dependency>  
 		    <groupId>org.primefaces</groupId>  
 		    <artifactId>primefaces</artifactId>  
-		    <version>5.3</version>  
+		    <version>6.0</version>  
 		</dependency> 
 		<dependency> 
 			<groupId>org.primefaces.themes</groupId>
-			<artifactId>south-street</artifactId>
+			<artifactId>bluesky</artifactId>
 			<version>1.0.10</version>
 		</dependency>
 		
